--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="./javascript/scripts.js"></script>
+    <script src="./javascript/scripts.js" defer></script>
     <title>Weather</title>
 </head>
 <body>
