--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap"
+      rel="stylesheet"
+    />
     <script src="./javascript/scripts.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/e04de14959.js"
+      crossorigin="anonymous"
+      defer
+    ></script>
     <title>Weather</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+
+    <div class="container">
+        <div class="search-box">
+            <i class="fa-solid fa-location-dot"></i>
+            <input type="text" placeholder="Enter your location">
+            <button class="fa-solid fa-magnifying-glass"></button>
+        </div>
+
+        <div class="not-found">
+          <img src="./images/404.png">
+          <p>Oops! Invalid location :/</p>
+        </div>
+
+        <div class="weather-box">
+          <img src="">
+          <p class="temperature"></p>
+          <p class="description"></p>
+        </div>
+
+        <div class="weather-details">
+          <div class="humidity">
+            <i class="fa-solid fa-water"></i>
+            <div class="text">
+              <span></span>
+              <p>Humidity</p>
+            </div>
+          </div>
+
+          <div class="wind">
+            <i class="fa-solid fa-wind"></i>
+            <div class="text">
+              <span></span>
+              <p>Wind Speed</p>
+            </div>
+          </div>
+        </div>
+    </div>
+
+  </body>
 </html>
