--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="not-found">
-          <img src="./images/404.png">
+          <img src="./images/40.jpg">
           <p>Oops! Invalid location :/</p>
         </div>
 
